apps/base/expense-tracker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: expense-tracker
  namespace: expense-tracker
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: expense-tracker
  ports:
    - name: http
      port: 80
      targetPort: http
